# rules_typescript

./: .bazelrc  .gitignore  BUILD.bazel  CODEOWNERS  DEVELOPING.md  README.md  TODO.md  WORKSPACE  defs.bzl  devserver-benchmark-runner.js  package-lock.json  package.bzl  package.json  protractor.conf.js  revert_rules_go_commit_4442d82a001f378d0605cbbca3fb529979a1c3a6.patch  version.bzl
.bazelci/: presubmit.yml
.ci/: rules_typescript.json
.circleci/: bazel.rc  config.yml
devserver/: BUILD.bazel  livereload_proxy.go  livereload_proxy_test.go  main.go  runfile-filesystem.go
devserver/devserver/: BUILD.bazel  devserver.go  devserver_test.go
devserver/devserver/test/test-workspace/: BUILD.bazel
docs/: ban_nested_it.md
examples/: BUILD.bazel  WORKSPACE  bar.ts  declarations.d.ts  foo.ts  tsconfig.json
examples/angularjs/: BUILD.bazel  closure_ts_binary.bzl  index.html  internal_node_module.bzl  main.ts  package-lock.json  package.json
examples/angularjs/hello-world/: BUILD.bazel  hello-world.css  hello-world.html  hello-world.ts
examples/app/: BUILD.bazel  WORKSPACE  angularjs_shim.commonjs.js  angularjs_shim.requirejs.js  app.ts  app_e2e_test.ts  index.html  internal_node_module.bzl  main.ts  main_e2e_test.ts  package.json  tsconfig.json
examples/app/hello-world/: BUILD.bazel  hello-world.html  hello-world.ts
examples/bazel_managed_deps/: BUILD.bazel  README.md  package.json
examples/closure/: BUILD.bazel  closure.bzl  foo.ts  main.js
examples/closure_compiled/: BUILD.bazel  declarations.d.ts  greeter.ts
examples/devmode_consumer/: BUILD.bazel
examples/devserver/: BUILD.bazel  index.html
examples/es5_output/: BUILD.bazel  b.ts  es5_consumer.bzl  es5_output_test.sh
examples/es5_output/rand/: rand.ts
examples/es6_output/: BUILD.bazel  es6_consumer.bzl  es6_output_test.sh  greeter.ts
examples/generated_ts/: BUILD.bazel
examples/googmodule/: BUILD.bazel  a.ts  googmodule_output_test.js
examples/integration/: BUILD.bazel  index.spec.ts
examples/program/: BUILD  main.ts  package-lock.json  package.json
examples/protocol_buffers/: BUILD.bazel  car.proto  car.spec.ts  index.html  require.config.js
examples/some_library/: BUILD.bazel
examples/some_module/: BUILD.bazel  module_load_test.sh
examples/some_soy/: BUILD.bazel  closure.d.ts  main.ts  runtime_deps_main.ts  runtime_deps_test.sh  some.soy  soy_render_test.sh
examples/testing/: BUILD.bazel  static_script.js  static_script.spec.ts
internal/: BUILD.bazel  build_defs.bzl  extra_actions_base.proto  package.json  ts_repositories.bzl  ts_test.bzl  ts_web_test.bzl  tsc_plugin.bzl
internal/common/: BUILD  closure.bzl  collect_es6_sources.bzl  compilation.bzl  compute_node_modules_root.bzl  module_mappings.bzl  reroot_prod_files.bzl  tsconfig.bzl
internal/concatjs/: BUILD  concatjs.go
internal/cypress_test/: BUILD.bazel  cypress_runner.js  cypress_test.bzl
internal/devserver/: BUILD  BUILD.bazel  devserver.go  devserver_launcher.sh  devserver_launcher.tpl  devserver_test.go  launcher_template.sh  package.json  ts_devserver.bzl
internal/devserver/main/: BUILD  main.go
internal/e2e/: default_tsconfig_test.js
internal/e2e/disable_tsetse_for_external/: BUILD.bazel
internal/e2e/errorchecks/: erroneous.ts
internal/e2e/npm_packages/karma/: BUILD.bazel  WORKSPACE
internal/e2e/npm_packages/karma_stack_trace/: WORKSPACE
internal/e2e/npm_packages/karma_typescript/: WORKSPACE
internal/e2e/npm_packages/ts_auto_deps/: WORKSPACE  package-template.json
internal/e2e/npm_packages/ts_devserver/: WORKSPACE
internal/e2e/npm_packages/typescript_2.7/: WORKSPACE
internal/e2e/npm_packages/typescript_2.8/: WORKSPACE
internal/e2e/npm_packages/typescript_2.9/: WORKSPACE
internal/e2e/npm_packages/typescript_3.1/: WORKSPACE
internal/e2e/package_karma/: WORKSPACE  decrement.js  decrement.spec.js
internal/e2e/package_karma_stack_trace/: BUILD.bazel  WORKSPACE
internal/e2e/package_karma_stack_trace/test_folder/: BUILD.bazel
internal/e2e/package_typescript_2.7/: WORKSPACE
internal/e2e/package_typescript_2.8/: WORKSPACE  main.ts
internal/e2e/package_typescript_2.9/: WORKSPACE
internal/e2e/package_typescript_3.0/: BUILD.bazel  WORKSPACE
internal/e2e/package_typescript_karma/: BUILD.bazel  WORKSPACE  package.json
internal/e2e/reference_types_directive/: BUILD.bazel
internal/e2e/ts_auto_deps/: BUILD.bazel  WORKSPACE
internal/e2e/typescript_3.1/: WORKSPACE
internal/karma/: BUILD.bazel  README.md  WORKSPACE  browser_repository.bzl  extract.sh  index.ts  karma.conf.js  package.bzl  package.json  test-main.js  ts_web_test.bzl  ts_web_test_suite.bzl
internal/protobufjs/: BUILD.bazel  ts_proto_library.bzl
internal/tsc_wrapped/: BUILD.bazel  cache.ts  compiler_host.ts  file_cache.ts  index.ts  normalize_slashes.ts  package.json  path.ts  plugin_api.ts  posix-paths.ts  strict_deps.ts  strict_deps_test.ts  tsc_wrapped.ts  tsconfig.ts  tsconfig_test.ts  umd_module_declaration_transform.ts  worker.ts
internal/tsc_wrapped/tsetse/: language_service_plugin.ts  runner.ts
internal/tsc_wrapped/tsetse/tests/ban_expect_truthy_promise/: BUILD  negatives.ts
internal/tsc_wrapped/tsetse/tests/check_return_value/: BUILD
internal/tsc_wrapped/tsetse/tests/must_use_promises/: BUILD
internal/tsetse/: BUILD.bazel  error_code.ts  language_server_plugin.ts  language_service_plugin.ts  runner.ts  tsconfig.json
internal/tsetse/rules/: ban_expect_truthy_promise_rule.ts  ban_nested_it.ts  ban_promise_as_condition_rule.ts  check_return_value_rule.ts  equals_nan_rule.ts  must_use_promises_rule.ts
internal/tsetse/tests/ban_conformance_pattern/: util_test.ts
internal/tsetse/tests/ban_expect_truthy_promise/: BUILD
internal/tsetse/tests/ban_nested_it/: negative.ts  positive.ts
internal/tsetse/tests/ban_promise_as_condition/: BUILD
internal/tsetse/tests/check_return_value/: BUILD
internal/tsetse/tests/equals_nan/: BUILD  BUILD.bazel  negatives.ts  positives.ts
internal/tsetse/tests/must_use_promises/: BUILD
tslint/: BUILD.bazel  tsconfig.json  tslint.json  tslint_runner.ts
(+20 files in other folders)
