load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# gazelle:exclude worker_protocol.proto

package(default_visibility = ["//visibility:public"])

exports_files(["worker_protocol.proto"])

proto_library(
    name = "blaze_worker_proto",
    srcs = ["worker_protocol.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "blaze_worker_go_proto",
    importpath = "github.com/bazelbuild/rules_typescript/internal",
    proto = ":blaze_worker_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    importpath = "github.com/bazelbuild/rules_typescript/internal",
    library = ":blaze_worker_go_proto",
)
