load(":closure.bzl", "closure_ts_import")
load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_binary", "closure_js_library")
load("//internal:defaults.bzl", "ts_library")

ts_library(
    name = "foo_ts_library",
    srcs = ["foo.ts"],
    #tsickle=True,
)

closure_ts_import(
    name = "foo_closure_js_library",
    deps = [":foo_ts_library"],
)

closure_js_library(
    name = "closure_lib",
    srcs = ["main.js"],
    deps = [":foo_closure_js_library"],
)

closure_js_binary(
    name = "closure",
    entry_points = ["npm_bazel_typescript.examples.closure.main"],
    deps = ["closure_lib"],
)
