# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_binary")
load("//:defs.bzl", "ts_library")


ts_library(
    name = "es6_output_lib",
    srcs = [
        "main.ts",
        "greeter.ts",
    ],
)

closure_js_binary(
    name = "closure_compiled",
    deps = [":es6_output_lib"],
    defs = [
        "--module_resolution=NODE",
        "--dependency_mode=LOOSE",
        "--js_module_root=bazel-out/k8-fastbuild/bin/examples/closure_compiled/examples/closure_compiled",
        "--jscomp_off=reportUnknownTypes",
        "--jscomp_off=missingSourcesWarnings",
    ],
)
