# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_binary")
load("//examples/angularjs:closure_ts_binary.bzl", "closure_ts_binary")
load("//:defs.bzl", "ts_library")

ts_library(
    name = "child",
    srcs = [
        "greeter.ts",
        "declarations.d.ts",
    ],
)

ts_library(
    name = "parent",
    srcs = ["main.ts"],
    deps = [":child"],
)

closure_ts_binary(
    name = "closure_compiled",
    deps = [":parent"],
    defs = [
        "--jscomp_off=checkTypes",
    ],
)
