load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

genrule(
    name = "foo_ts",
    outs = ["foo.ts"],
    cmd = "echo 'export const a = 1;' > $@",
)

ts_library(
    name = "generated_ts",
    srcs = [":foo.ts"],
    module_name = "build_bazel_rules_typescript_examples/generated_ts",
    module_root = "foo.d.ts",
)
