load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_test")

ts_library(
    name = "lib",
    srcs = ["decrement.ts"],
)

ts_library(
    name = "tests",
    srcs = ["decrement.spec.ts"],
    deps = [":lib"],
    testonly = 1,
)

ts_test(
    name = "testing",
    deps = [
      ":tests",
    ],
)
