package(default_visibility = ["//visibility:public"])

exports_files([
    "test-main.js",
    "karma.conf.js",
    # Exported to be consumed for generating skydoc.
    "ts_web_test.bzl",
    "ts_web_test_suite.bzl",
])

load("//internal:defaults.bzl", "ts_library")

ts_library(
    name = "karma_concat_js",
    srcs = glob(["*.ts"]),
    module_name = "@bazel/karma",
    tsconfig = "//internal/karma:tsconfig.json",
    deps = [
      "@npm//:@types/node",
      "@npm//:tmp",
    ]
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary", "npm_package")

nodejs_binary(
    name = "karma_bin",
    data = [
      "@npm//:jasmine-core",
      "@npm//:karma",
      "@npm//:karma-chrome-launcher",
      "@npm//:karma-firefox-launcher",
      "@npm//:karma-jasmine",
      "@npm//:karma-sauce-launcher",
      "@npm//:karma-sourcemap-loader",
      "@npm//:karma-requirejs",
      "@npm//:requirejs",
      "@npm//:tmp",
      ":karma_concat_js",
    ],
    install_source_map_support = False,
    entry_point = "karma/bin/karma",
)

genrule(
    name = "license_copy",
    srcs = ["//:LICENSE"],
    outs = ["LICENSE"],
    cmd = "cp $< $@",
)

genrule(
    name = "check_version_copy",
    srcs = ["//tools:check_version.js"],
    outs = ["check_version.js"],
    cmd = "cp $< $@",
)

npm_package(
    name = "npm_package",
    srcs = [
        "README.md",
        "package.json",
    ],
    deps = [
        ":check_version_copy",
        ":karma_concat_js",
        ":license_copy",
    ],
)
