licenses(["notice"])  # Apache 2.0

load("//:defs.bzl", "ts_library")

error_message = "TS21223: x == NaN always returns false; use isNaN\(x\) instead"

ts_library(
    name = "positives",
    testonly = 1,
    srcs = [
        "positives.ts",
    ],
    expected_diagnostics = [
        "\(1,19\).*" + error_message,
        "\(5,5\).*" + error_message,
        "\(6,5\).*" + error_message,
        "\(8,1\).*" + error_message,
        "\(9,1\).*" + error_message,
    ],
)

ts_library(
    name = "negatives",
    testonly = 1,
    srcs = [
        "negatives.ts",
    ],
)
